# connect

./: .gitmodules  Cargo.toml  Makefile  README.md  build.rs  layout.json
contrib/: Connect MIDI OSC.osc3  Pixel_Coordinates.xlsx  connect.service  make_connect_layout.py  xlsx_layout.py
contrib/deploy/: connect.service  env
src/: anim.rs  events.rs  gui.rs  ledscape.rs  main.rs  main.rs.bk  opc.rs  osc.rs
src/animations/: idle.rs  mod.rs  touch.rs
src/config/: mod.rs
src/ledscape/: mod.rs
src/pixels/: mod.rs
