[package]
name = "connect"
version = "0.1.0"
authors = ["Yuval Kohavi <yuval.kohavi@gmail.com>"]


[features]
gui = ["kiss3d", "serde_json", "serde", "serde_derive", "nalgebra"]
ledscape = []

[dependencies]
libc = "0.2.0"
log = "0.3"
env_logger = "0.3"

num = "0.1"
palette = "0.2"

tk-opc = "0.1"

bit-set = "0.4.0"
rosc = "~0.1"
bitflags = "0.8"


serial = "0.3"

clap = "2.23.3"

kiss3d = { version = "0.9", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
nalgebra    = { version = "0.12", optional = true }

rand = "0.3"

[build-dependencies]
gcc = "0.3"